fixed overflowing meeting ids when small

--- a/src/components/TimeBlocks/stylesheet.scss
+++ b/src/components/TimeBlocks/stylesheet.scss
@@ -55,6 +55,7 @@
       .ids {
         display: flex;
         font-weight: bold;
+        overflow: hidden;
 
         span {
           font-size: .8em;
